tests/errors/add_int_real.x
myInt = 12
myReal = 13.90

result = myInt + myReal